; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_uark.c_uark_cfg_get_status.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/serial/extr_uark.c_uark_cfg_get_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ucom_softc = type { %struct.uark_softc* }
%struct.uark_softc = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ucom_softc*, i32*, i32*)* @uark_cfg_get_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @uark_cfg_get_status(%struct.ucom_softc* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.ucom_softc*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.uark_softc*, align 8
  store %struct.ucom_softc* %0, %struct.ucom_softc** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load %struct.ucom_softc*, %struct.ucom_softc** %4, align 8
  %9 = getelementptr inbounds %struct.ucom_softc, %struct.ucom_softc* %8, i32 0, i32 0
  %10 = load %struct.uark_softc*, %struct.uark_softc** %9, align 8
  store %struct.uark_softc* %10, %struct.uark_softc** %7, align 8
  %11 = load %struct.uark_softc*, %struct.uark_softc** %7, align 8
  %12 = getelementptr inbounds %struct.uark_softc, %struct.uark_softc* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = load i32*, i32** %5, align 8
  store i32 %13, i32* %14, align 4
  %15 = load %struct.uark_softc*, %struct.uark_softc** %7, align 8
  %16 = getelementptr inbounds %struct.uark_softc, %struct.uark_softc* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32*, i32** %6, align 8
  store i32 %17, i32* %18, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
